plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.+'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    flatDir {
        dir 'libs'
    }
    maven {
        url "https://www.cursemaven.com"
    }
    maven {
        name = "JEI"
        url 'https://maven.blamejared.com'
    }
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://mvn.devos.one/snapshots" } // Registrate
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // ForgeConfigAPIPort
}

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users starting in 1.20.5, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "curse.maven:jei-238222:5846880"
    implementation "curse.maven:jade-324717:5884231"

    implementation "curse.maven:dyenamics-509276:6394640"
    implementation "libs:productivelib-1.21.0:0.1.12"
    implementation "curse.maven:productivebees-377897:6029033"
    implementation "curse.maven:productivemetalworks-1184570:6390845"
    implementation "curse.maven:curios-309927:6401872"

//    implementation "libs:supplementaries-1.20:2.7.20")
//    implementation "libs:suppsquared-1.19.2:1.0.14")
//    implementation "libs:handcrafted-forge-1.20.1:3.0.5")
//    implementation "libs:mixinextras-forge:0.3.5" // bz

//    implementation "curse.maven:autoreglib-250363:4100299")
    implementation "curse.maven:athena-841890:5629395" // supplementaries, sleep tight
    implementation "curse.maven:selene-499980:6391012" // supplementaries, sleep tight
//    implementation "curse.maven:balm-531761:3914527")
    implementation "curse.maven:bookshelf-228525:6390300" // botany pots
//    implementation "curse.maven:blueprint-382216:4019850") // clayworks
////    implementation "curse.maven:ctm-267602:3933537") // chipped
    implementation "curse.maven:architectury-api-419699:5786327" // furnish, comforts
    implementation "curse.maven:terrablender-940057:6054947" // regions unexplored
    implementation "curse.maven:resourceful-lib-570073:5973188" // handcrafted
//
    implementation "curse.maven:chalk-533748:5979986"
    implementation "curse.maven:comforts-276951:5821146"
    implementation "curse.maven:openblocks-elevator-250832:6199696"
    implementation "curse.maven:furnish-547069:5683304"
//    implementation "curse.maven:mrcrayfish-furniture-mod-55438:4602980") // TODO enable
//    implementation "curse.maven:botany-pots-353928:5727506"
//    implementation "curse.maven:sleep-tight-817564:5085863"
    implementation "curse.maven:regions-unexplored-659110:6273893"
    implementation "curse.maven:handcrafted-538214:6330030"
    implementation "curse.maven:another-furniture-610492:5850327"

    implementation "curse.maven:fusion-connected-textures-854949:6396619"
    implementation "curse.maven:supermartijn642s-core-lib-454372:6076757"
    implementation "curse.maven:connected-glass-383129:5657280"

    implementation "curse.maven:the-bumblezone-forge-362479:6358119"
    implementation "curse.maven:cucumber-272335:6373317"
    implementation "curse.maven:mystical-agriculture-246640:6373333"

//    implementation "curse.maven:create-328085:6323270")
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation "net.createmod.ponder:Ponder-NeoForge-${minecraft_version}:${ponder_version}"
    compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
    runtimeOnly "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}"
    implementation "com.tterrag.registrate:Registrate:${registrate_version}"

    implementation "curse.maven:sophisticated-core-618298:6384976"
    implementation "curse.maven:sophisticated-backpacks-422301:6377608"
    implementation "curse.maven:crystalix-1187033:6407169"
    implementation "curse.maven:luminax-1165932:6140008"
//    implementation "curse.maven:create-deco-509285:4183385")
//    implementation "curse.maven:farmers-delight-398521:3999157")
//    implementation "curse.maven:nightlights-651876:4618572") // TODO enable
//    implementation "curse.maven:snowy-spirit-566142:4263819")
//    implementation "curse.maven:supplementaries-412082:5004248")
//    implementation "curse.maven:supplementaries-squared-838411:4992450")
//    implementation "curse.maven:quark-243121:4366541")
//    implementation "curse.maven:skinned-lanterns-414154:4656953") // TODO enable
//    implementation "curse.maven:oreganized-769203:4377982")
//    implementation "curse.maven:glazed-resymmetry-714619:4403239")
//    implementation "curse.maven:ceramics-250617:4049193")
//    implementation "curse.maven:clayworks-592162:4396960")
//    implementation "curse.maven:chipped-456956:4634856") // TODO enable
}


tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            issue_url              : issue_url,
            dyenamics_version_range : dyenamics_version_range
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
